styles.css
body {
  background-color: #333;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  font-size: 16px;
}

.mainLocator {
  width: 80%;
  margin: 8% auto auto;
  text-align: center;
  color: #ccc;
  font-family: 'Roboto', sans-serif;
}

#cityName {
  color: #eee;
}

.grid-container {
  display: grid;
  grid-template-rows: repeat(2, 1fr);
  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
  gap: 30px 50px;
  margin: 150px auto;
}

.grid-item {
  background-color: rgba(128, 128, 128, 0.8);
  padding: 20px;
  text-align: center;
  color: white;
  border-radius: 3px;
  width: 1fr;
  height: 80px;
  backdrop-filter: blur(5px);
  transition: background-color 0.3s ease-in-out;
}

.grid-item:hover {
  background-color: rgba(128, 128, 128, 1);
}

#locationInput,
button {
  background-color: #777;
  color: #ddd;
  transition: background-color 0.3s ease-in-out;
}

#locationInput::placeholder {
  color: #999;
}

@media (max-width: 600px) {
  .grid-container {
    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); /* Adjust column width for smaller screens */
  }
}

#minMaxTemp {
  display: flex; /* Use flexbox to make minTemp and maxTemp display horizontally */
  align-items: center; /* Center vertically */
  justify-content: center; /* Center horizontally */
  background-color: transparent;
  width: 50%;
  margin: 0 auto; /* Center horizontally by adding auto margin */
}

#minTemp,
#maxTemp {
  margin-right: 10px;
}


/*--------VALUES--------*/

#currentTemp {
 font-size: 32px;
}

